# MrLavaLobaCpp

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanbuildinfo.txt  conanfile.py  conaninfo.txt  graph_info.json  input_data.ini
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: Params.cpp  Params.hpp  lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: MrLavaLoba_test.cpp
